--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
+    "lodash": "^4.17.13",
     "@cljs-oss/module-deps": "^1.1.1",
-    "puppeteer": "^1.0.0"
+    "puppeteer": "^1.19.0"
   }
 }
