--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "acorn": "^5.7.4",
+    "minimist": "^1.2.5",
     "@cljs-oss/module-deps": "^1.1.1",
     "puppeteer": "^1.20.0"
   }
